--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
   </footer>
 </div>
 
+<!-- Rosa Luxemburg zur Russischen Revolution -->
+<!-- Card für die Einstiegsseite 
+
+	Parameter:
+	url    Zielseite (im Basisverzeichnis)
+	target "_blank", default: "_self"
+	img    Bild (im Unterverzeichnis img/)
+	beschr Beschreibung
+	button Label des Buttons
+-->
+
+<div class="card" style="margin-top:3rem;">
+<div class="row">
+	<div class="col-2">
+		<a href="pdf/rr.pdf" target="_blank"><img src="/img/rr.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
+	</div>
+	<div class="col">
+		<p>Rosa Loxemburg: <em>Zur russischen Revolution: Eine kritische
+	Würdigung</em><br />
+	Erstausgabe 1922 mit Vorwort und Einleitung von
+	<a href="https://de.wikipedia.org/wiki/Paul_Levi" target="_blank">Paul Levi</a><br />
+	sowie dem Transkripts des Vortrags 2021 <em>Die Lokomotiven der
+	Revolution</em> von <a href="https://de.wikipedia.org/wiki/Bini_Adamczak" target="_blank">Bini Adamczak</a>.</p>
+	</div>
+</div>
+	 <footer class="is-right">
+		 <a class="button primary outline" href="pdf/rr.pdf" target="_blank">PDF öffnen</a>
+  </footer>
+</div>
+
 <!-- Verratene Revolution -->
 <!-- Card für die Einstiegsseite 
 
