--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<a href="pdf/rr.pdf" target="_blank"><img src="/img/rr.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
 	</div>
 	<div class="col">
-		<p>Rosa Loxemburg: <em>Zur russischen Revolution: Eine kritische
+		<p>Rosa Luxemburg: <em>Zur russischen Revolution: Eine kritische
 	Würdigung</em><br />
 	Erstausgabe 1922 mit Vorwort und Einleitung von
 	<a href="https://de.wikipedia.org/wiki/Paul_Levi" target="_blank">Paul Levi</a><br />
