--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 		<a href="pdf/rr.pdf" target="_blank"><img src="/img/rr.jpg" width="120" style="margin-right:0.5rem; margin-top:0.8rem;" /></a>
 	</div>
 	<div class="col">
-		<p>Rosa Luxemburg: <em>Zur russischen Revolution: Eine kritische
+		<p>Rosa Luxemburg: <em>Die russische Revolution: Eine kritische
 	Würdigung</em><br />
 	Erstausgabe 1922 mit Vorwort und Einleitung von
 	<a href="https://de.wikipedia.org/wiki/Paul_Levi" target="_blank">Paul Levi</a><br />
-	sowie dem Transkripts des Vortrags 2021 <em>Die Lokomotiven der
+	sowie dem Transkript des Vortrags 2021 <em>Die Lokomotiven der
 	Revolution</em> von <a href="https://de.wikipedia.org/wiki/Bini_Adamczak" target="_blank">Bini Adamczak</a>.</p>
 	</div>
 </div>
