carol und winslow

--- a/krimis/carol.html
+++ b/krimis/carol.html
@@ -39,7 +39,7 @@ ist ein britischer Autor:
   <li>2013: <em>Broken Dolls</em></li>
   <li>2014: <em>Watch Me</em></li>
   <li>2015: <em>Prey</em></li>
-  <li>2017: The Quiet Man_</li>
+  <li>2017: <em>The Quiet Man</em></li>
 </ul>
 
 <h4 id="jefferson-winter-fbi-reihe">Jefferson-Winter-FBI-Reihe</h4>
