--- a/krimis/winslow.html
+++ b/krimis/winslow.html
@@ -47,8 +47,14 @@ ist ein amerikanischer Autor: <a href="https://don-winslow.com" target="_blank">
 
 <ul>
   <li>2005: <em>The Power of the Dog</em> (dt. <a href="https://de.wikipedia.org/wiki/Tage_der_Toten" target="_blank">Tage der Toten</a>)</li>
-  <li>2015: The Cartel (dt. <a href="https://de.wikipedia.org/wiki/Das_Kartell_(Roman)" target="_blank">Das Kartell</a>)</li>
-  <li>2019: The Border (dt. Jahre des Jägers)</li>
+  <li>2015: The Cartel (dt. <a href="https://de.wikipedia.org/wiki/Das_Kartell_(Roman)" target="_blank"><em>Das Kartell</em></a>)</li>
+  <li>2019: <em>The Border</em> (dt. Jahre des Jägers)</li>
+</ul>
+
+<h4 id="die-crime-saga">Die Crime-Saga</h4>
+
+<ul>
+  <li>2021: City on Fire (dt. City on Fire)</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
@@ -67,6 +73,7 @@ ist ein amerikanischer Autor: <a href="https://don-winslow.com" target="_blank">
   <li>2014: Missing, New York (dt. Missing. NewYork)</li>
   <li>2016: Germany (dt. Germany)</li>
   <li>2017: The Force (dt. Corruption)</li>
+  <li>2020: Broken</li>
 </ul>
 
 <!-- previous and next page -->
