The judge's list

--- a/krimis/grisham.html
+++ b/krimis/grisham.html
@@ -63,7 +63,7 @@ ist ein amerikanischer Autor: <a href="https://www.jgrisham.com" target="_blank"
   <li>2019: The Reckoning (dt. Das Bekenntnis)</li>
   <li>2020: The Guardians (dt. Die Wächter)</li>
   <li>2021: A Time for Mercy (dt. Der Polizist)</li>
-  <li>2021: The Judge’s List</li>
+  <li>2021: <em>The Judge’s List</em> (dt. Der Verdächtige)</li>
 </ul>
 
 <h4 id="weitere-romane">Weitere Romane</h4>
