--- a/krimis/grisham.html
+++ b/krimis/grisham.html
@@ -37,7 +37,7 @@ ist ein amerikanischer Autor: <a href="https://www.jgrisham.com" target="_blank"
 <ul>
   <li>1989: <em>A Time to Kill</em> (dt. <a href="https://de.wikipedia.org/wiki/Die_Jury" target="_blank">Die Jury</a>)</li>
   <li>1991: <em>The Firm</em>  (dt. <a href="https://de.wikipedia.org/wiki/Die_Firma_(Roman)" target="_blank">Die Firma</a>)</li>
-  <li>1992: _The Pelican Brief (dt. <a href="https://de.wikipedia.org/wiki/Die_Akte_(Roman)" target="_blank">Die Akte</a>)</li>
+  <li>1992: <em>The Pelican Brief</em> (dt. <a href="https://de.wikipedia.org/wiki/Die_Akte_(Roman)" target="_blank">Die Akte</a>)</li>
   <li>1993: <em>The Client</em>  (dt. <a href="https://de.wikipedia.org/wiki/Der_Klient" target="_blank">Der Klient</a>)</li>
   <li>1994: <em>The Chamber</em> (dt. <a href="https://de.wikipedia.org/wiki/Die_Kammer_(Roman)" target="_blank">Die Kammer</a>)</li>
   <li>1995: <em>The Rainmaker</em>  (dt. <a href="https://de.wikipedia.org/wiki/Der_Regenmacher_(Roman)" target="_blank">Der Regenmacher</a>)</li>
