Missing New York

--- a/krimis/winslow.html
+++ b/krimis/winslow.html
@@ -70,7 +70,7 @@ ist ein amerikanischer Autor: <a href="https://don-winslow.com" target="_blank">
   <li>2011: <em>Satori</em> (dt. Satori)</li>
   <li>2012: The Kings of Cool (dt. Kings of Cool)</li>
   <li>2014: Vengeance (dt. Vergeltung)</li>
-  <li>2014: Missing, New York (dt. Missing. NewYork)</li>
+  <li>2014: Missing, New York (dt. <em>Missing. NewYork</em>)</li>
   <li>2016: Germany (dt. Germany)</li>
   <li>2017: The Force (dt. Corruption)</li>
   <li>2020: Broken</li>
