--- a/krimis/lescroart.html
+++ b/krimis/lescroart.html
@@ -87,7 +87,7 @@ ist ein amerikanischer Autor: <a href="https://johnlescroart.com" target="_blank
 <h4 id="weitere-romane">Weitere Romane</h4>
 
 <ul>
-  <li>2017: Fatal</li>
+  <li>2017: <em>Fatal</em></li>
 </ul>
 
 <!-- previous and next page -->
