--- a/krimis/ribeiro.html
+++ b/krimis/ribeiro.html
@@ -37,7 +37,7 @@
   <li>2017: <em>Lost in Fuseta</em></li>
   <li>2018: <em>Lost in Fuseta – Spur der Schatten</em></li>
   <li>2019: Weiße Fracht – Lost in Fuseta</li>
-  <li>2020: Schwarzer August – Lost in Fuseta</li>
+  <li>2020: <em>Schwarzer August – Lost in Fuseta</em></li>
 </ul>
 
 <!-- previous and next page -->
